--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -8,5 +8,36 @@ user.greeting.text=Здравствуйте,
 nav.home=Главная
 nav.profile=Профиль
 nav.clients=Клиенты
-nav.actions=Действия
-nav.logout=Выйти
+nav.actions=Операции
+
+# buttons
+btn.login=Войти
+btn.logout=Выйти
+btn.logup=Зарегистрировать
+
+# texts
+txt.greetings=Здравствуйте
+txt.card.greetings=Добро пожаловать в Bank-system!
+txt.card.greetings.body=Данная система позволяет просто и эффективно решать Ваши повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в рабочий аккаунт. Если Вы – новый сотрудник и не ещё имеете собственный акканут, пожауйста обратитесь к своему системному администратору.
+txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
+txt.blockquote.author= – Максим Горький.
+
+# worker
+worker.last.name=Фамилия
+worker.first.name=Имя
+worker.middle.name=Отчество
+worker.birth.date=Дата рождения
+worker.username=E-mail
+worker.password=Пароль
+worker.passport.id=Индеинтификационный номер пасспорта
+
+# forms
+
+# placeholders
+placeholder.input.last.name=
+placeholder.input.first.name=
+placeholder.input.middle.name=
+placeholder.input.birth.date=
+placeholder.input.username=
+placeholder.input.password=
+placeholder.input.passport.id=
