--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -40,8 +40,8 @@ passport.id=Индеинтификационный номер пасспорта
 passport.gender.label=Пол
 passport.gender.male=мужской
 passport.gender.female=женский
-passport.series=серия
-passport.number=номер
+passport.series=Серия
+passport.number=Номер
 
 
 
