Update main page

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -5,6 +5,11 @@ app.name=Bank-system
 nav.home=Главная
 nav.profile=Профиль
 nav.clients=Клиенты
+nav.clients.show.all=Просмотреть всех
+nav.clients.create=Просмотреть
+nav.clients.find=Найти
+nav.clients.edit=Редактировать
+nav.clients.delete=Удалить
 nav.actions=Операции
 
 # buttons
