Add new i18n texts

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -5,17 +5,33 @@ app.name=Bank-system
 nav.home=Главная
 nav.profile=Профиль
 nav.clients=Клиенты
-nav.clients.show.all=Просмотреть всех
-nav.clients.create=Просмотреть
-nav.clients.find=Найти
+nav.clients.show=Просмотреть
+nav.clients.create=Добавить
 nav.clients.edit=Редактировать
 nav.clients.delete=Удалить
 nav.actions=Операции
+
+#titles
+title.main.page=Главная страница
+title.worker.profile=Профиль сотрудника
+title.client.index=Клиенты Bank-system
+title.client.show=Клиент
+title.client.create=Создание нового клиента
+title.client.edit=Редактирование клиента
+title.log.in=Вход в систему
+title.log.up=Регистрация
+title.error.oops=Упс..
 
 # buttons
 btn.login=Войти
 btn.logout=Выйти
 btn.logup=Зарегистрировать
+btn.search=Поиск
+
+#labels
+
+
+#clients
 
 # texts
 txt.greetings=Здравствуйте
@@ -41,14 +57,12 @@ passport.birth.date=Дата рождения
 passport.date.of.issue=Дата выдачи
 passport.date.of.expire=Дата окончания
 passport.country.name=Гражданство
-passport.id=Индеинтификационный номер пасспорта
+passport.id=ID паспорта
 passport.gender.label=Пол
 passport.gender.male=мужской
 passport.gender.female=женский
 passport.series=Серия
 passport.number=Номер
-
-
 
 # forms
 
@@ -59,4 +73,10 @@ placeholder.input.middle.name=Введите отчество
 placeholder.input.birth.date=Введите дату рождения
 placeholder.input.username=Введите имя пользователя
 placeholder.input.password=Введите пароль
-placeholder.input.passport.id=Введите индеинтификационный номер пасспорта
+placeholder.input.passport.id=Введите ID паспорта
+
+# errors
+error.text.seems.resource.notfound=Кажется, запрашиваемый Вами ресурс не найден
+
+# smiles
+smile.sad=:(
