--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -27,6 +27,7 @@ btn.login=Войти
 btn.logout=Выйти
 btn.logup=Зарегистрировать
 btn.search=Поиск
+btn.next=Далее
 
 #labels
 
@@ -36,9 +37,9 @@ btn.search=Поиск
 # texts
 txt.greetings=Здравствуйте
 txt.card.greetings=Добро пожаловать в Bank-system!
-txt.card.greetings.body=Данная система позволяет просто и эффективно решать Ваши повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в рабочий аккаунт. Если Вы – новый сотрудник и не ещё имеете собственный акканут, пожауйста обратитесь к своему системному администратору.
+txt.card.greetings.body=Bank-system позволяет просто и эффективно решать Ваши повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в рабочий аккаунт. Если Вы – новый сотрудник и не ещё имеете собственный акканут, пожауйста обратитесь к своему системному администратору.
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
-txt.blockquote.author= – Максим Горький.
+txt.blockquote.author= Максим Горький.
 
 # worker
 worker.greeting.text=Здравствуйте,
@@ -48,6 +49,13 @@ worker.access.level=Уровень доступа сотрудника
 worker.public.information=Общая информация
 worker.private.information=Персональные данные
 worker.profile.edit=Редактировать
+
+# client
+client.private.information=Персональные данные
+client.general.information=Общая информация
+client.address.information=Адрес проживания
+client.contact.information=Контактная информация
+client.profile.edit=Редактировать
 
 # passport
 passport.last.name=Фамилия
@@ -66,10 +74,20 @@ passport.number=Номер
 
 # forms
 
+# labels
+label.last.name=Фамилия
+label.first.name=Имя
+label.middle.name=Отчество
+label.email=Электронная почта
+label.birth.date=Дата рождения
+label.passport.id=ID паспорта
+
 # placeholders
+placeholder.input.id=Введите ID
 placeholder.input.last.name=Введите фамилию
 placeholder.input.first.name=Введите имя
 placeholder.input.middle.name=Введите отчество
+placeholder.input.email=Введите e-mail
 placeholder.input.birth.date=Введите дату рождения
 placeholder.input.username=Введите имя пользователя
 placeholder.input.password=Введите пароль
