--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -37,7 +37,7 @@ btn.next=Далее
 # texts
 txt.greetings=Здравствуйте
 txt.card.greetings=Добро пожаловать в Bank-system!
-txt.card.greetings.body=Bank-system позволяет просто и эффективно решать Ваши повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в рабочий аккаунт. Если Вы – новый сотрудник и не ещё имеете собственный акканут, пожауйста обратитесь к своему системному администратору.
+txt.card.greetings.body=Bank-system позволяет сотрудникам банка просто и эффективно решать повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в свой рабочий аккаунт. Если вы – новый сотрудник и ещё не зарегистрированы в системе, пожауйста обратитесь к своему системному администратору.
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
 txt.blockquote.author= Максим Горький.
 
