--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -37,9 +37,9 @@ btn.next=Далее
 # texts
 txt.greetings=Здравствуйте
 txt.card.greetings=Добро пожаловать в Bank-system!
-txt.card.greetings.body=Bank-system позволяет сотрудникам банка просто и эффективно решать повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в свой рабочий аккаунт. Если вы – новый сотрудник и ещё не зарегистрированы в системе, пожауйста обратитесь к своему системному администратору.
+txt.card.greetings.body=Bank-system позволяет сотрудникам банка просто и эффективно решать повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в свой рабочий аккаунт. Если вы – новый сотрудник и ещё не зарегистрированы в системе, пожалуйста обратитесь к своему системному администратору.
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
-txt.blockquote.author= Максим Горький.
+txt.blockquote.author=Максим Горький.
 
 # worker
 worker.greeting.text=Здравствуйте,
@@ -62,6 +62,7 @@ passport.last.name=Фамилия
 passport.first.name=Имя
 passport.middle.name=Отчество
 passport.birth.date=Дата рождения
+passport.birth.place=Место рождения
 passport.date.of.issue=Дата выдачи
 passport.date.of.expire=Дата окончания
 passport.country.name=Гражданство
