--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -28,6 +28,7 @@ btn.logout=Выйти
 btn.logup=Зарегистрировать
 btn.search=Поиск
 btn.next=Далее
+btn.save=Сохранить
 
 #labels
 
@@ -40,6 +41,18 @@ txt.card.greetings=Добро пожаловать в Bank-system!
 txt.card.greetings.body=Bank-system позволяет сотрудникам банка просто и эффективно решать повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в свой рабочий аккаунт. Если вы – новый сотрудник и ещё не зарегистрированы в системе, пожалуйста обратитесь к своему системному администратору.
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
 txt.blockquote.author=Максим Горький.
+txt.relationship=Семейное положение
+txt.military=Отношение к военской службе
+txt.else=Прочее
+txt.address.country=Страна
+txt.address.city=Город
+txt.address.street=Улица
+txt.address.building.number=Дом
+txt.address.apartment.number=Квартира
+txt.address.post.code=Почтовый индекс
+txt.passport=Паспорт
+txt.phones=Телефоны
+txt.fio=ФИО
 
 # worker
 worker.greeting.text=Здравствуйте,
@@ -56,13 +69,25 @@ client.general.information=Общая информация
 client.address.information=Адрес проживания
 client.contact.information=Контактная информация
 client.profile.edit=Редактировать
+client.mobile.phone.number=Номер телефона (сотовый)
+client.home.phone.number=Номер телефона (домашний)
+client.is.married=женат (замужем)
+client.is.bound.to.military.service=военнообязан
+client.is.retiree=пенсионер
+client.is.disabled=инвалид
+client.working.place=Место работы
+client.address=Адрес проживания
+client.company.name=Название компании
+client.position=Должность
+client.income.per.month=Ежемесячный доход (BYN)
+client.living.address=Адрес проживания
 
 # passport
 passport.last.name=Фамилия
 passport.first.name=Имя
 passport.middle.name=Отчество
 passport.birth.date=Дата рождения
-passport.birth.place=Место рождения
+passport.citizenship=Гражданство
 passport.date.of.issue=Дата выдачи
 passport.date.of.expire=Дата окончания
 passport.country.name=Гражданство
@@ -72,6 +97,12 @@ passport.gender.male=мужской
 passport.gender.female=женский
 passport.series=Серия
 passport.number=Номер
+passport.authority=Орган выдачи паспорта
+
+# registration
+passport.registration=Прописка
+passport.registration.date=Дата регистрации
+passport.registration.authority=Орган регистрации
 
 # forms
 
@@ -82,17 +113,61 @@ label.middle.name=Отчество
 label.email=Электронная почта
 label.birth.date=Дата рождения
 label.passport.id=ID паспорта
+label.input.last.name=Введите фамилию
+label.input.first.name=Введите имя
+label.input.middle.name=Введите отчество
+label.input.email=Введите адрес электронной почты
+label.input.birth.date=Введите дату рождения
+label.input.username=Введите имя пользователя
+label.input.password=Введите пароль
+label.input.passport.id=Введите идеинтификационный номер паспорта
+label.input.passport.series=Введите серию паспорта
+label.input.passport.number=Введите номер паспорта
+label.input.passport.authority=Введите орган выдачи паспорта
+label.input.passport.date.of.issue=Введите дату выдачи пасспорта
+label.input.passport.date.of.expire=Введите дату окончания пасспорта
+label.input.mobile.phone.number=Введите номер мобильного телефона
+label.input.home.phone.number=Введите номер домашнего телефона
+label.input.company.name=Введите название компании
+label.input.position=Укажите должность
+label.income.per.month=Укажите заработную плату за месяц
+label.input.passport.registration.date=Введите дату выдачи регистрации
+label.input.passport.registration.authority=Введите орган выдачи регистрации
+label.input.country=Выберите страну
+label.input.city=Введите город
+label.input.street=Введите улицу
+label.input.building.number=Введите номер дома
+label.input.apartment.number=Введите номер квартиры
+label.input.post.code=Введите почтовый индекс
+label.input.gender=Выберите пол
 
 # placeholders
-placeholder.input.id=Введите ID
-placeholder.input.last.name=Введите фамилию
-placeholder.input.first.name=Введите имя
-placeholder.input.middle.name=Введите отчество
-placeholder.input.email=Введите e-mail
-placeholder.input.birth.date=Введите дату рождения
-placeholder.input.username=Введите имя пользователя
-placeholder.input.password=Введите пароль
-placeholder.input.passport.id=Введите ID паспорта
+placeholder.input.id=Идеинтификационный номер
+placeholder.input.last.name=Фамилия
+placeholder.input.first.name=Имя
+placeholder.input.middle.name=Отчество
+placeholder.input.email=proverka@example.com
+placeholder.input.birth.date=Дата рождения
+placeholder.input.username=Имя пользователя
+placeholder.input.password=Пароль
+placeholder.input.passport.id=id паспорта
+placeholder.input.passport.series=Серия паспорта
+placeholder.input.passport.number=Номер паспорта
+placeholder.input.passport.authority=Орган выдачи паспорта
+placeholder.input.passport.date.of.issue=Дату выдачи пасспорта
+placeholder.input.passport.date.of.expire=Дата окончания действия пасспорта
+placeholder.input.mobile.phone.number=Мобильный номер
+placeholder.input.home.phone.number=Домашний номер
+placeholder.input.company.name=Название компании
+placeholder.input.position=Должность
+placeholder.income.per.month=BYN
+placeholder.input.passport.registration.date=Дата выдачи регистрации
+placeholder.input.passport.registration.authority=Орган выдачи регистрации
+placeholder.input.city=Город
+placeholder.input.street=Улица
+placeholder.input.building.number=Номер дома
+placeholder.input.apartment.number=Номер квартиры
+placeholder.input.post.code=Почтовый индекс
 
 # errors
 error.text.seems.resource.notfound=Кажется, запрашиваемый Вами ресурс не найден
