--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -29,7 +29,7 @@ worker.middle.name=Отчество
 worker.birth.date=Дата рождения
 worker.username=E-mail
 worker.password=Пароль
-worker.passport.id=Индеинтификационный номер пасспорта
+worker.passport.id=Индеинтификационный номер паспорта
 
 # forms
 
