--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -124,8 +124,8 @@ label.input.passport.id=Введите идеинтификационный но
 label.input.passport.series=Введите серию паспорта
 label.input.passport.number=Введите номер паспорта
 label.input.passport.authority=Введите орган выдачи паспорта
-label.input.passport.date.of.issue=Введите дату выдачи пасспорта
-label.input.passport.date.of.expire=Введите дату окончания пасспорта
+label.input.passport.date.of.issue=Введите дату выдачи паспорта
+label.input.passport.date.of.expire=Введите дату окончания паспорта
 label.input.mobile.phone.number=Введите номер мобильного телефона
 label.input.home.phone.number=Введите номер домашнего телефона
 label.input.company.name=Введите название компании
@@ -142,7 +142,7 @@ label.input.post.code=Введите почтовый индекс
 label.input.gender=Выберите пол
 
 # placeholders
-placeholder.input.id=Идеинтификационный номер
+placeholder.input.id=Id клиента
 placeholder.input.last.name=Фамилия
 placeholder.input.first.name=Имя
 placeholder.input.middle.name=Отчество
@@ -154,8 +154,8 @@ placeholder.input.passport.id=id паспорта
 placeholder.input.passport.series=Серия паспорта
 placeholder.input.passport.number=Номер паспорта
 placeholder.input.passport.authority=Орган выдачи паспорта
-placeholder.input.passport.date.of.issue=Дату выдачи пасспорта
-placeholder.input.passport.date.of.expire=Дата окончания действия пасспорта
+placeholder.input.passport.date.of.issue=Дату выдачи паспорта
+placeholder.input.passport.date.of.expire=Дата окончания действия паспорта
 placeholder.input.mobile.phone.number=Мобильный номер
 placeholder.input.home.phone.number=Домашний номер
 placeholder.input.company.name=Название компании
