Fixing client saving

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -6,6 +6,7 @@ nav.home=Главная
 nav.profile=Профиль
 nav.clients=Клиенты
 nav.clients.show=Просмотреть
+nav.clients.all=Все клиенты
 nav.clients.create=Добавить
 nav.clients.edit=Редактировать
 nav.clients.delete=Удалить
@@ -142,11 +143,11 @@ label.input.post.code=Введите почтовый индекс
 label.input.gender=Выберите пол
 
 # placeholders
-placeholder.input.id=Id клиента
+placeholder.input.id=id клиента
 placeholder.input.last.name=Фамилия
 placeholder.input.first.name=Имя
 placeholder.input.middle.name=Отчество
-placeholder.input.email=proverka@example.com
+placeholder.input.email=e-mail
 placeholder.input.birth.date=Дата рождения
 placeholder.input.username=Имя пользователя
 placeholder.input.password=Пароль
@@ -154,15 +155,17 @@ placeholder.input.passport.id=id паспорта
 placeholder.input.passport.series=Серия паспорта
 placeholder.input.passport.number=Номер паспорта
 placeholder.input.passport.authority=Орган выдачи паспорта
-placeholder.input.passport.date.of.issue=Дату выдачи паспорта
+placeholder.input.passport.date.of.issue=Датa выдачи паспорта
 placeholder.input.passport.date.of.expire=Дата окончания действия паспорта
 placeholder.input.mobile.phone.number=Мобильный номер
 placeholder.input.home.phone.number=Домашний номер
 placeholder.input.company.name=Название компании
 placeholder.input.position=Должность
-placeholder.income.per.month=BYN
+placeholder.income.per.month=Ежемесячный доход
+placeholder.income.byn=BYN
 placeholder.input.passport.registration.date=Дата выдачи регистрации
 placeholder.input.passport.registration.authority=Орган выдачи регистрации
+placeholder.input.country=Страна
 placeholder.input.city=Город
 placeholder.input.street=Улица
 placeholder.input.building.number=Номер дома
