--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -19,6 +19,7 @@ title.client.index=Клиенты Bank-system
 title.client.show=Клиент
 title.client.create=Создание нового клиента
 title.client.edit=Редактирование клиента
+title.client.delete=Удаление клиента
 title.log.in=Вход в систему
 title.log.up=Регистрация
 title.error.oops=Упс..
@@ -30,6 +31,10 @@ btn.logup=Зарегистрировать
 btn.search=Поиск
 btn.next=Далее
 btn.save=Сохранить
+btn.cancel=Отмена
+btn.close=Закрыть
+btn.delete=Удалить
+btn.understood=Понятно
 
 #labels
 
@@ -54,6 +59,7 @@ txt.address.post.code=Почтовый индекс
 txt.passport=Паспорт
 txt.phones=Телефоны
 txt.fio=ФИО
+txt.warning.delete.client=Вы действительно хотите удалить клиента? Внимание, это действие необратимо.
 
 # worker
 worker.greeting.text=Здравствуйте,
