Add github link in the index view

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -183,3 +183,6 @@ error.text.seems.resource.notfound=Кажется, запрашиваемый В
 
 # smiles
 smile.sad=:(
+
+# links
+link.github=https://github.com/OdinRossy/bank-system
