Accounts for clients is ready

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -23,6 +23,8 @@ title.client.delete=Удаление клиента
 title.log.in=Вход в систему
 title.log.up=Регистрация
 title.error.oops=Упс..
+title.account.delete=Удаление счета у клиента
+title.account.create=Создание нового счета
 
 # buttons
 btn.login=Войти
@@ -60,6 +62,7 @@ txt.passport=Паспорт
 txt.phones=Телефоны
 txt.fio=ФИО
 txt.warning.delete.client=Вы действительно хотите удалить клиента? Внимание, это действие необратимо.
+txt.warning.delete.account=Вы действительно хотите удалить счет у клиента? Внимание, это действие необратимо.
 
 # worker
 worker.greeting.text=Здравствуйте,
@@ -88,6 +91,7 @@ client.company.name=Название компании
 client.position=Должность
 client.income.per.month=Ежемесячный доход (BYN)
 client.living.address=Адрес проживания
+client.accounts=Счета
 
 # passport
 passport.last.name=Фамилия
@@ -110,6 +114,14 @@ passport.authority=Орган выдачи паспорта
 passport.registration=Прописка
 passport.registration.date=Дата регистрации
 passport.registration.authority=Орган регистрации
+
+# account
+account.user=Владелец счета
+account.worker.id=ID сотрудника
+account.date.of.issue=Дата открытия
+account.date.of.expire=Дата закрытия
+account.date.of.currency=Валюта
+account.date.of.value=Сумма
 
 # forms
 
@@ -147,6 +159,7 @@ label.input.building.number=Введите номер дома
 label.input.apartment.number=Введите номер квартиры
 label.input.post.code=Введите почтовый индекс
 label.input.gender=Выберите пол
+label.select.currency=Выберите валюту
 
 # placeholders
 placeholder.input.id=id клиента
