--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -91,7 +91,7 @@ client.company.name=Название компании
 client.position=Должность
 client.income.per.month=Ежемесячный доход (BYN)
 client.living.address=Адрес проживания
-client.accounts=Счета
+client.accounts=Счета клиента
 
 # passport
 passport.last.name=Фамилия
