--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -50,7 +50,7 @@ txt.card.greetings.body=Bank-system позволяет сотрудникам б
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
 txt.blockquote.author=Максим Горький.
 txt.relationship=Семейное положение
-txt.military=Отношение к военской службе
+txt.military=Отношение к военной службе
 txt.else=Прочее
 txt.address.country=Страна
 txt.address.city=Город
