--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -32,6 +32,7 @@ btn.logout=Выйти
 btn.logup=Зарегистрировать
 btn.search=Поиск
 btn.next=Далее
+btn.back=Назад
 btn.save=Сохранить
 btn.cancel=Отмена
 btn.close=Закрыть
