--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -15,7 +15,7 @@ nav.actions=Операции
 #titles
 title.main.page=Главная страница
 title.worker.profile=Профиль сотрудника
-title.client.index=Клиенты Bank-system
+title.client.index=Клиенты
 title.client.show=Клиент
 title.client.create=Создание нового клиента
 title.client.edit=Редактирование клиента
