Add initial bank operation

--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -25,6 +25,7 @@ title.log.up=Регистрация
 title.error.oops=Упс..
 title.account.delete=Удаление счета у клиента
 title.account.create=Создание нового счета
+title.operation=Банковские операции
 
 # buttons
 btn.login=Войти
