--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -10,7 +10,7 @@ nav.clients.all=Все клиенты
 nav.clients.create=Добавить
 nav.clients.edit=Редактировать
 nav.clients.delete=Удалить
-nav.actions=Операции
+nav.operation=Операции
 
 #titles
 title.main.page=Главная страница
