--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -125,6 +125,10 @@ account.date.of.expire=Дата закрытия
 account.date.of.currency=Валюта
 account.date.of.value=Сумма
 
+# operation
+operation.credit=Кредит
+operation.deposit=Депозит
+
 # forms
 
 # labels
