--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -120,10 +120,15 @@ passport.registration.authority=Орган регистрации
 # account
 account.user=Владелец счета
 account.worker.id=ID сотрудника
+account.worker.name=Cотрудник
 account.date.of.issue=Дата открытия
 account.date.of.expire=Дата закрытия
-account.date.of.currency=Валюта
-account.date.of.value=Сумма
+account.currency=Валюта
+account.value=Сумма
+account.name=Название счета
+account.number=Номер счета
+account.type=Тип счета
+account.percentage=%
 
 # operation
 operation.credit=Кредит
