--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -26,6 +26,8 @@ title.error.oops=Упс..
 title.account.delete=Удаление счета у клиента
 title.account.create=Создание нового счета
 title.operation=Банковские операции
+title.operation.credit=Кредит
+title.operation.deposit=Депозит
 
 # buttons
 btn.login=Войти
@@ -39,6 +41,7 @@ btn.cancel=Отмена
 btn.close=Закрыть
 btn.delete=Удалить
 btn.understood=Понятно
+btn.go=Перейти
 
 #labels
 
@@ -121,6 +124,7 @@ passport.registration.authority=Орган регистрации
 account.user=Владелец счета
 account.worker.id=ID сотрудника
 account.worker.name=Cотрудник
+account.client.name=Клиент
 account.date.of.issue=Дата открытия
 account.date.of.expire=Дата закрытия
 account.currency=Валюта
@@ -129,6 +133,7 @@ account.name=Название счета
 account.number=Номер счета
 account.type=Тип счета
 account.percentage=%
+account.contract=Договор №
 
 # operation
 operation.credit=Кредит
