--- a/src/main/resources/i18n/messages_ru.properties
+++ b/src/main/resources/i18n/messages_ru.properties
@@ -55,7 +55,8 @@ txt.greetings=Здравствуйте
 txt.card.greetings=Добро пожаловать в Bank-system!
 txt.card.greetings.body=Bank-system позволяет сотрудникам банка просто и эффективно решать повседневные задачи. Нажмите кнопку "Войти" чтобы выполнить вход в свой рабочий аккаунт. Если вы – новый сотрудник и ещё не зарегистрированы в системе, пожалуйста обратитесь к своему системному администратору.
 txt.card.credit.body= — экономические отношения, при которых одна из сторонне возмещает немедленно полученные от другой стороны деньги или другиересурсы, но обещает предоставить возмещение (оплату) или вернуть ресурсыв будущем.
-txt.card.deposit.body= — сумма денег, переданнаялицом кредитному учреждению сцелью получить доход в виде процентов, образующихся в ходе финансовыхопераций с вкладом.
+txt.card.deposit.body= — сумма денег, переданная лицом кредитному учреждению сцелью получить доход в виде процентов, образующихся в ходе финансовыхопераций с вкладом.
+txt.card.close.bank.day.body= — Прием, обработка и исполнение платежных поручений клиента в белорусских рублях с текущих (расчетных) счетов и счетов клиентовнерезидентов, по тарифицируемым операциям.
 txt.blockquote=Всякая работа трудна до времени, пока ее не полюбишь, а потом она возбуждает и становится легче
 txt.blockquote.author=Максим Горький.
 txt.relationship=Семейное положение
